--- a/person.html
+++ b/person.html
@@ -37,7 +37,7 @@ robot_tags:
             </ul>
         </div>
         <div class="col-md-6">
-            <img class="full_width" style="margin-top:80px" src="/assets/images/person.jpg">
+            <img class="full_width" style="margin-top:80px" src="assets/images/person.jpg">
         </div>
     </div>
 </div>
