--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@ robot_tags:
 
 
 <div class="container">
-    <h1>Dipl. Gitarrenlehrer erteilt Gitarrenunterricht in Hamburg Eimsbüttel</h1>
-    <h2>klassische Gitarre, Fingerstyle, Liedbegleitung, Rock, Pop</h2>
-    <h3>Einzel- & Gruppenunterricht, Ensemblespiel</h3>
+    <div class="index">
+        <h1>Dipl. Gitarrenlehrer erteilt Gitarrenunterricht in Hamburg Eimsbüttel</h1>
+        <h2>klassische Gitarre, Fingerstyle, Liedbegleitung, Rock, Pop</h2>
+        <h3>Einzel- & Gruppenunterricht, Ensemblespiel</h3>
 
-    <img src="./assets/images/laden_hallo.png">
-    <br>
-    <br>
-    <p><strong>Gitarrenlehrer Bernhard Welling</strong><br>individuelle Unterrichtsgestaltung</p>
+        <img src="./assets/images/laden_hallo.png">
+        <br>
+        <br>
+        <p><strong>Gitarrenlehrer Bernhard Welling</strong><br>individuelle Unterrichtsgestaltung</p>
+    </div>
 </div>
