--- a/location.html
+++ b/location.html
@@ -12,25 +12,16 @@ robot_tags:
     <h2>Sillemstraße 40</h2>
 
 
-    <img src="assets/images/location/Bild4.jpg">
-    <div class="popup-gallery">
-        <a href="./assets/images/location/4165_gitarrenunterricht_in_eimsbuettel.jpg">
-        <img src="./assets/images/location/4165_gitarrenunterricht_in_eimsbuettel_pv.jpg" width="75" height="75"></a>
-        <a href="./assets/images/location/4178_gitarrenunterricht_in_hamburg.jpg">
-        <img src="./assets/images/location/4178_gitarrenunterricht_in_hamburg_pv.jpg" width="75" height="75"></a>
-        <a href="./assets/images/location/4179_gitarrenunterricht_naehe_osterstrasse.jpg">
-        <img src="./assets/images/location/4179_gitarrenunterricht_naehe_osterstrasse_pv.jpg" width="75" height="75"></a>
-        <a href="./assets/images/location/4196_gitarrenunterricht_fuer_kinder.jpg">
-        <img src="./assets/images/location/4196_gitarrenunterricht_fuer_kinder_pv.jpg" width="75" height="75"></a>
-        <a href="./assets/images/location/4214_gitarrenunterricht_fuer_anfaenger.jpg">
-        <img src="./assets/images/location/4214_gitarrenunterricht_fuer_anfaenger_pv.jpg" width="75" height="75"></a>
-        <a href="./assets/images/location/4217_gitarrenunterricht_fuer_fortgeschrittene.jpg">
-        <img src="./assets/images/location/4217_gitarrenunterricht_fuer_fortgeschrittene_pv.jpg" width="75" height="75"></a>
-        <a href="./assets/images/location/4221_gitarrenunterricht_studio.jpg">
-        <img src="./assets/images/location/4221_gitarrenunterricht_studio_pv.jpg" width="75" height="75"></a>
-        <a href="./assets/images/location/4224_gitarrenunterricht_aufnahmen.jpg">
-        <img src="./assets/images/location/4224_gitarrenunterricht_aufnahmen_pv.jpg" width="75" height="75"></a>
-        <a href="./assets/images/location/4234_gitarrenunterricht_gitarrenlehrer.jpg">
-        <img src="./assets/images/location/4234_gitarrenunterricht_gitarrenlehrer_pv.jpg" width="75" height="75"></a>
-    </div>
+    <!--<img src="assets/images/location/Bild4.jpg">-->
+    <ul class="pgwSlider">
+        <li><img src="./assets/images/location/4165_gitarrenunterricht_in_eimsbuettel.jpg"></li>
+        <li><img src="./assets/images/location/4178_gitarrenunterricht_in_hamburg.jpg"></li>
+        <li><img src="./assets/images/location/4179_gitarrenunterricht_naehe_osterstrasse.jpg"></li>
+        <li><img src="./assets/images/location/4196_gitarrenunterricht_fuer_kinder.jpg"></li>
+        <li><img src="./assets/images/location/4214_gitarrenunterricht_fuer_anfaenger.jpg"></li>
+        <li><img src="./assets/images/location/4217_gitarrenunterricht_fuer_fortgeschrittene.jpg"></li>
+        <li><img src="./assets/images/location/4221_gitarrenunterricht_studio.jpg"></li>
+        <li><img src="./assets/images/location/4224_gitarrenunterricht_aufnahmen.jpg"></li>
+        <li><img src="./assets/images/location/4234_gitarrenunterricht_gitarrenlehrer.jpg"></li>
+    </ul>
 </div>
