--- a/kontakt.html
+++ b/kontakt.html
@@ -22,9 +22,9 @@ robot_tags:
     <br>
     <br>
     <iframe
-      width="450"
-      height="250"
-      frameborder="0" style="border:0"
+      width="600"
+      height="333"
+      frameborder="0" style="border:0;max-width:100%"
       src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAQyTYJyJ32qJKxkYc2b1dyEW8dS8fnpQ8&q=Bernhard+Welling,+Diplom-Gitarrenlehrer" allowfullscreen>
     </iframe>
 </div>
