--- a/technik.html
+++ b/technik.html
@@ -7,4 +7,15 @@ robot_tags:
 
 <div class="container">
     <h1>Technik</h1>
+    <br>
+    <br>
+
+    <ul class="pgwSlider">
+        <li><img src="./assets/images/technik/06_4213_gitarrenunterricht_studio_aufnahmen.jpg"></li>
+        <li><img src="./assets/images/technik/00_04187_location.jpg"></li>
+        <li><img src="./assets/images/technik/00_4199_gitarrenunterricht_studio_mixer.jpg"></li>
+        <li><img src="./assets/images/technik/01_4205_gitarrenunterricht_mikrofon.jpg"></li>
+        <li><img src="./assets/images/technik/05_4208_gitarrenunterricht_gesangsaufnahmen.jpg"></li>
+        <li><img src="./assets/images/technik/07_4209_gitarrenunterricht_klavier_aufnahmen.jpg"></li>
+    </ul>
 </div>
