--- a/unterricht.html
+++ b/unterricht.html
@@ -8,15 +8,23 @@ robot_tags:
 
 <div class="container">
     <h1>Gitarrenunterricht</h1>
+    <br>
+    <br>
+    
     <strong>Beispiele:</strong>
     <br>
     <img src="./assets/images/laden_hallo_nah.jpg">
+    <br>
+    <br>
 
-    <h2>Einzel Gitarrenunterricht: 30 oder 45 Minuten</h2>
-    <h2>Gruppen Gitarrenunterricht (max 3 Personen): 45 bzw. 60 Minuten</h2>
-    <h2>Ensemblespiel 14 tägig: 60 Minuten</h2>
+    <h3>Einzel Gitarrenunterricht: <i>30 oder 45 Minuten</i></h3>
+    <h3>Gruppen Gitarrenunterricht (max 3 Personen): <i>45 bzw. 60 Minuten</i></h3>
+    <h3>Ensemblespiel 14 tägig: <i>60 Minuten</i></h3>
 
+    <br>
+    <br>
     <p><strong>Konzept</strong><br>
+    <br>
     Grundsätzlich spreche ich die Inhalte des Gitarrenunterrichtes mit den Schülern (bei Kindern mit Schülern und deren Eltern) ab. Der Gitarrenunterricht ist schülerorientiert, d.h. der Schüler bestimmt, was er lernt. Ich stehe beratend zur Seite.
 Sind musikalische Vorkenntnisse vorhanden, kann es durchaus ratsam sein nur "Lücken" zu füllen. Bei Anfängern empfehle ich einen systematischen Aufbau mit Hilfe einer Gitarrenschule. Falls erforderlich wird vom Gitarrenlehrer ergänzendes Material eingebracht.
 Der Schwerpunkt meiner eigenen Ausbildung und demzufolge dessen, was ich vermitteln kann, liegt beim Spiel der klassischen Gitarre. Dies schließt Solospiel, Liedbegleitung und Folklore (Fingerstyle) ein.
