--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@ content_description:
 robot_tags:
 ---
 
-
+<div class="jumbotron jumbotron-index">
+    <div class="container">
+        <h1><span class="color">Dipl. Gitarrenlehrer erteilt Gitarrenunterricht in Hamburg Eimsbüttel</span></h1>
+        <h2><span class="color">klassische Gitarre, Fingerstyle, Liedbegleitung, Rock, Pop</span></h2>
+        <h3><span class="color">Einzel- & Gruppenunterricht, Ensemblespiel</span></h3>
+    </div>
+</div>
 <div class="container">
-    <div class="index">
-        <h1>Dipl. Gitarrenlehrer erteilt Gitarrenunterricht in Hamburg Eimsbüttel</h1>
-        <h2>klassische Gitarre, Fingerstyle, Liedbegleitung, Rock, Pop</h2>
-        <h3>Einzel- & Gruppenunterricht, Ensemblespiel</h3>
+    
 
+    <div class="index">
         <img src="./assets/images/laden_hallo.png">
         <br>
         <br>
