--- a/kontakt.html
+++ b/kontakt.html
@@ -17,7 +17,7 @@ robot_tags:
     20257 Hamburg<br>
     <br>
     Tel.: 040 - 405245<br>
-    Fax: 040 - 43197784<br>
+    Mobil: 0176 - 48311997<br>
     <br>
     <br>
     <br>
