--- a/location.html
+++ b/location.html
@@ -15,7 +15,8 @@ robot_tags:
 
 
     <!--<img src="assets/images/location/Bild4.jpg">-->
-    <ul class="pgwSlider">
+    <ul class="pgwSlideshow">
+        <li><img src="./assets/images/location/Bild4.jpg"></li>
         <li><img src="./assets/images/location/4165_gitarrenunterricht_in_eimsbuettel.jpg"></li>
         <li><img src="./assets/images/location/4178_gitarrenunterricht_in_hamburg.jpg"></li>
         <li><img src="./assets/images/location/4179_gitarrenunterricht_naehe_osterstrasse.jpg"></li>
