--- a/technik.html
+++ b/technik.html
@@ -10,9 +10,9 @@ robot_tags:
     <br>
     <br>
 
-    <ul class="pgwSlider">
-        <li><img src="./assets/images/technik/06_4213_gitarrenunterricht_studio_aufnahmen.jpg"></li>
+    <ul class="pgwSlideshow">
         <li><img src="./assets/images/technik/00_04187_location.jpg"></li>
+        <li><img src="./assets/images/technik/06_4213_gitarrenunterricht_studio_aufnahmen.jpg"></li>
         <li><img src="./assets/images/technik/00_4199_gitarrenunterricht_studio_mixer.jpg"></li>
         <li><img src="./assets/images/technik/01_4205_gitarrenunterricht_mikrofon.jpg"></li>
         <li><img src="./assets/images/technik/05_4208_gitarrenunterricht_gesangsaufnahmen.jpg"></li>
