--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@ content_description:
 robot_tags:
 ---
 
-<div class="jumbotron jumbotron-index">
-    <div class="container">
-        <h1><span class="color">Dipl. Gitarrenlehrer erteilt Gitarrenunterricht in Hamburg Eimsbüttel</span></h1>
-        <h2><span class="color">klassische Gitarre, Fingerstyle, Liedbegleitung, Rock, Pop</span></h2>
-        <h3><span class="color">Einzel- & Gruppenunterricht, Ensemblespiel</span></h3>
-    </div>
-</div>
 <div class="container">
+    <br>
+    <br>
+    <h1 class="text-center">Dipl. Gitarrenlehrer erteilt Gitarrenunterricht in Hamburg Eimsbüttel</h1>
+    <h2 class="text-center">klassische Gitarre, Fingerstyle, Liedbegleitung, Rock, Pop</h2>
+    <h3 class="text-center">Einzel- & Gruppenunterricht, Ensemblespiel</h3>
+    
+
+    <br>
+    <br>
     
 
     <div class="index">
