--- a/kontakt.html
+++ b/kontakt.html
@@ -16,8 +16,10 @@ robot_tags:
     Sillemstraße 40<br>
     20257 Hamburg<br>
     <br>
-    Tel.: 040 - 405245<br>
-    Mobil: 0176 - 48311997<br>
+      
+    <span class="contact_align">Tel:</span> 040 - 40 52 45<br>
+    <span class="contact_align">Mobil:</span> 0176 - 48 31 1997
+
     <br>
     <br>
     <br>
