--- a/kosten.html
+++ b/kosten.html
@@ -50,9 +50,9 @@ robot_tags:
     </p>
 
     <p>
-        Wird der Gitarrenunterricht im laufenden Unterrichtsjahr beendet, so erstelle ich eine Endabrechnung, in der die eingezahlten Monatsbeträge und die erteilten Stunden gegengerechnet werden.
-        In den 13 Wochen Schulferien und an gesetzlichen Feiertagen findet kein Unterricht statt.
-        Nach Ablauf der Probephase (ca. 4-6 Wochen), beträgt die Kündigungszeit 1 Monat zum Monatsende.
+        Wird der Gitarrenunterricht im laufenden Unterrichtsjahr beendet, so erstelle ich eine Endabrechnung, in der die eingezahlten Monatsbeträge und die erteilten Stunden gegengerechnet werden.<br>
+        In den 13 Wochen Schulferien und an gesetzlichen Feiertagen findet kein Unterricht statt.<br>
+        Nach Ablauf der Probephase (ca. 4-6 Wochen), beträgt die Kündigungszeit 1 Monat zum Monatsende.<br>
         Es müssen <b>keine</b> 1/2 Jahres- oder Ganzjahresverträge abgeschlossen werden.
     </p>
 </div>
