--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ robot_tags:
         </div>
     </div>
 
-    <hr class="line-splitter">
+    <!--<hr class="line-splitter">
 
     <div class="row">
         <div class="col-md-6">
@@ -90,6 +90,6 @@ robot_tags:
         </div>
     </div>
 
-    <hr class="line-splitter">
+    <hr class="line-splitter">-->
 
 </div>
