--- a/person.html
+++ b/person.html
@@ -8,7 +8,7 @@ robot_tags:
 <div id="jumbotron-person" class="jumbotron">
   <div class="container">
       <h1>Zur Person</h1>
-      <h2>Professioneller Gitarrenunterricht von studiertem Gitarrenlehrer</h2>
+      <!--<h2>Professioneller Gitarrenunterricht von studiertem Gitarrenlehrer</h2>-->
   </div>
 </div>
 
