--- a/technik.html
+++ b/technik.html
@@ -8,7 +8,7 @@ robot_tags:
 <div id="jumbotron-technik" class="jumbotron">
     <div class="container">
         <h1>Technik</h1>
-        <h2>Moderne Technik, wie in einem Tonstudio</h2>
+        <!--<h2>Moderne Technik, wie in einem Tonstudio</h2>-->
     </div>
 </div>
 
