--- a/unterricht.html
+++ b/unterricht.html
@@ -8,7 +8,7 @@ robot_tags:
 <div id="jumbotron-unterricht" class="jumbotron">
     <div class="container">
         <h1>Unterricht</h1>
-        <h2>Professionelle Ausbildung für Anfänger und Fortgeschrittene</h2>
+        <!--<h2>Professionelle Ausbildung für Anfänger und Fortgeschrittene</h2>-->
     </div>
 </div>
 
