--- a/kosten.html
+++ b/kosten.html
@@ -8,7 +8,7 @@ robot_tags:
 <div id="jumbotron-kosten" class="jumbotron">
   <div class="container">
       <h1>Kosten</h1>
-      <h2>Einzel- und Gruppenunterricht sowie Ensemblespiel möglich</h2>
+      <!--<h2>Einzel- und Gruppenunterricht sowie Ensemblespiel möglich</h2>-->
   </div>
 </div>
 
