--- a/location.html
+++ b/location.html
@@ -8,7 +8,7 @@ robot_tags:
 <div id="jumbotron-location" class="jumbotron">
     <div class="container">
         <h1>Location</h1>
-        <h2>Gemütlicher Unterrichtsraum in Hamburg Eimsbüttel</h2>
+        <!--<h2>Gemütlicher Unterrichtsraum in Hamburg Eimsbüttel</h2>-->
     </div>
 </div>
 
@@ -39,5 +39,6 @@ robot_tags:
 
 
     <hr class="line-splitter">
+    
 
 </div>
