--- a/sounds.html
+++ b/sounds.html
@@ -8,7 +8,7 @@ robot_tags:
 
 <div class="jumbotron">
     <div class="container">
-        <h1>♫Hörprobe♫</h1>
-        <h2>Einzel- und Gruppenunterricht sowie Ensemblespiel möglich</h2>
+        <h1>Hörprobe</h1>
+        <!--<h2>Einzel- und Gruppenunterricht sowie Ensemblespiel möglich</h2>-->
     </div>
 </div>
