progress & switch to google fonts

--- a/person.html
+++ b/person.html
@@ -25,7 +25,8 @@ robot_tags:
                 <li>1972 Fachabitur für Elektrotechnik</li>
                 <li>1972-1976 Wirtschaftsabitur</li>
                 <li>1976 Beginn des Studiums an der Hochschule für Musik und Theater Hamburg.<br>Zunächst für das Lehramt an Gymnasien mit Schwerpunkt Gitarre.<br/>Später dann Wechsel, zum Diplom Gitarrenlehrer.<br/><br/></li>
-                <li>Thema der Diplom-Arbeit: "Krafttraining für die linke Hand des Gitarristen?"<br><li>-------> Mehr Erfahren</li>&nbsp;</li>
+                <li>Thema der Diplom-Arbeit: "Krafttraining für die linke Hand des Gitarristen?"</li>
+                <br>
                 <li>Gitarrenunterricht - bei Prof. Eike Funck, Wulfin Lieske</li>
                 <li>Instrumentalspiel Klavier - bei Prof. Elgin Roth</li>
                 <li>Gesang - bei Prof. Claus Ocker</li>
