--- a/person.html
+++ b/person.html
@@ -15,27 +15,70 @@ robot_tags:
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            <h2>Zur Person</h2>
-            <br>
-            <ul class="text-left">
-                <li>Geboren 1951 in Hamburg</li>
-                <li>1966 Hauptschulabschluß</li>
-                <li>1968 Realschulabschluß</li>
-                <li>1971 Gesellenbrief als Rundfunk- und Fernsehtechniker</li>
-                <li>1972 Fachabitur für Elektrotechnik</li>
-                <li>1972-1976 Wirtschaftsabitur</li>
-                <li>1976 Beginn des Studiums an der Hochschule für Musik und Theater Hamburg.<br>Zunächst für das Lehramt an Gymnasien mit Schwerpunkt Gitarre.<br/>Später dann Wechsel, zum Diplom Gitarrenlehrer.<br/><br/></li>
-                <li>Thema der Diplom-Arbeit: "Krafttraining für die linke Hand des Gitarristen?"</li>
+            <div class="lebenslauf">
+                <h2>Zur Person</h2>
                 <br>
-                <li>Gitarrenunterricht - bei Prof. Eike Funck, Wulfin Lieske</li>
-                <li>Instrumentalspiel Klavier - bei Prof. Elgin Roth</li>
-                <li>Gesang - bei Prof. Claus Ocker</li>
-                <li>Chorleitung</li>
-                <li>Orchesterleitung</li>
-                <li>Musiktheorie / Gehörbildung</li>
-                <li>Pädagogik / Methodik / Didaktik<br/><br/></li>
-                <li>Seit 1995&nbsp;gebe ich Gitarrenunterricht in Hamburg Eimsbüttel&nbsp;</li>
-            </ul>
+                <table class="text-left">
+                    <colgroup>
+                        <col width="auto">
+                        <col width="auto">
+                    </colgroup>
+                    <tr>
+                        <td >1951</td>
+                        <td>Geboren in Hamburg</td>
+                    </tr>
+                    <tr><td>&nbsp;</td><td></td></tr>
+                    <tr>
+                        <td>1968</td>
+                        <td>Realschulabschluss</td>
+                    </tr>
+                    <tr>
+                        <td>1971</td>
+                        <td>Gesellenbrief als Rundfunk- und Fernsehtechniker</td>
+                    </tr>
+                    <tr>
+                        <td>1972</td>
+                        <td>Fachabitur für Elektrotechnik</td>
+                    </tr>
+                    <tr>
+                        <td style="padding-right: 10px;">1972-1976</td>
+                        <td>Wirtschaftsabitur</td>
+                    </tr>
+                    <tr><td>&nbsp;</td><td></td></tr>
+                    <tr>
+                        <td>1976</td>
+                        <td>Beginn des Studiums an der <b>Hochschule für Musik und Theater Hamburg</b>.<br>Zunächst für das Lehramt an Gymnasien mit Schwerpunkt Gitarre.
+                            Später dann Wechsel, zum Diplom Gitarrenlehrer.</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>
+                            <br>
+                            Thema der Diplom-Arbeit: <i>Krafttraining für die linke Hand des Gitarristen?</i>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>
+                            <br>
+                            <b>Kompetenzen:</b>
+                            <ul class="text-left lebenslauf-list">
+                                <li>Gitarrenunterricht - bei Prof. Eike Funck, Wulfin Lieske</li>
+                                <li>Instrumentalspiel Klavier - bei Prof. Elgin Roth</li>
+                                <li>Gesang - bei Prof. Claus Ocker</li>
+                                <li>Chorleitung</li>
+                                <li>Orchesterleitung</li>
+                                <li>Musiktheorie / Gehörbildung</li>
+                                <li>Pädagogik / Methodik / Didaktik<br/><br/></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Seit 1995</td>
+                        <td>Dipl. Gitarrenunterricht in Hamburg Eimsbüttel</td>
+                    </tr>
+                </table>
+            </div>
         </div>
         <div class="col-md-6">
             <img class="full_width" style="margin-top:80px" src="assets/images/person.jpg">
