--- a/index.html
+++ b/index.html
@@ -71,8 +71,11 @@ robot_tags:
         </div>
     </div>
 
-    <!--<hr class="line-splitter">
+    <hr class="line-splitter">
 
+    <h1>Kontakt aufnehmen</h1>
+
+    <!--
     <div class="row">
         <div class="col-md-6">
             <h2>Mehr Erfahren</h2>
