--- a/person.html
+++ b/person.html
@@ -61,7 +61,7 @@ robot_tags:
                         <td></td>
                         <td>
                             <br>
-                            <b>Kompetenzen:</b>
+                            <b>Qualifikation:</b>
                             <ul class="text-left lebenslauf-list">
                                 <li>Gitarrenunterricht - bei Prof. Eike Funck, Wulfin Lieske</li>
                                 <li>Instrumentalspiel Klavier - bei Prof. Elgin Roth</li>
