--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@ robot_tags:
         <div class="col-md-7">
             <div id="banner-home">
                 <h1>Hallo, willkommen auf meiner Website</h1>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et</p>
+                <p>Sie spielen akustische Gitarre und wollen sich weiterentwickeln? Sie sind AnfängerIn und wollen den Schritt in die faszinierende Welt des musizierens "wagen"?
+                    Dann sind Sie hier genau richtig. Sehen Sie sich auf der Seite um und verschaffen sich einen Eindruck über meinen Gitarrenunterricht in Hamburg-Eimsbüttel.</p>
             </div>
         </div>
         <div class="col-md-1"></div>
