--- a/kosten.html
+++ b/kosten.html
@@ -16,18 +16,18 @@ robot_tags:
     <div class="row">
         <div class="col-md-4">
             <img class="previewIcon" src="assets/images/kosten_probezeit.svg">
-            <h3>4-wöchige Probezeit</h3>
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et</p>
+            <h3>4- bis 6-wöchige Probephase</h3>
+            <!--<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et</p>-->
         </div>
         <div class="col-md-4">
             <img class="previewIcon" src="assets/images/kosten_ferien.svg">
             <h3>Kein Unterricht in den Ferien</h3>
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et</p>
+            <!--<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et</p>-->
         </div>
         <div class="col-md-4">
             <img class="previewIcon" src="assets/images/kosten_bindung.svg">
             <h3>Monatlich Kündigen</h3>
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et</p>
+            <!--<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et</p>-->
         </div>
     </div>
 </div>
@@ -44,22 +44,22 @@ robot_tags:
         <tr>
             <td>Einzelunterricht</td>
             <td>30 Min./Woche</td>
-            <td>17,00 Euro/30 Min. entspricht 56 Euro/mtl.</td>
+            <td>19,00 Euro/30 Min. entspricht 62 Euro/mtl.</td>
         </tr>
         <tr>
             <td></td>
             <td>45 Min./Woche</td>
-            <td>25,00 Euro/45 Min. entspricht 82 Euro/mtl.</td>
+            <td>27,50 Euro/45 Min. entspricht 90 Euro/mtl.</td>
         </tr>
         <tr>
             <td>2er Gruppe</td>
             <td>45 Min./Woche</td>
-            <td>16,00 Euro/45 Min. entspricht 51 Euro/mtl.</td>
+            <td>18,00 Euro/45 Min. entspricht 59 Euro/mtl. pro Pers.</td>
         </tr>
         <tr>
             <td>3er Gruppe</td>
             <td>60 Min./Woche</td>
-            <td>14,00 Euro/60 Min. entspricht 46 Euro/mtl.</td>
+            <td>16,00 Euro/60 Min. entspricht 52 Euro/mtl. pro Pers.</td>
         </tr>
     </table>
 </div>
@@ -67,11 +67,11 @@ robot_tags:
 <div class="container text-left">
     <p>
         <b>Anmerkung:</b><br>
-        Die Kosten pro Monat sind der 12. Teil des Jahresbetrages, der sich bei 39 Gitarrenunterrichtsstunden (die im Verlauf des Jahres gegeben werden) errechnet.Zum Beispiel 30 Min Einzelunterricht:<br>
+        Die Kosten pro Monat sind der 12. Teil des Jahresbetrages, der sich bei 39 Gitarrenunterrichtsstunden (die im Verlauf des Jahres gegeben werden) errechnet.<br>Zum Beispiel 30 Min. Einzelunterricht:<br>
     </p>
 
     <p>
-        <b>17,00 Euro; Einzelpreis * 39 Unterrichtseinheiten / 12 Monate = 56 Euro</b>
+        <b>19,00 Euro; Einzelpreis * 39 Unterrichtseinheiten / 12 Monate = 62 Euro</b>
     </p>
 
     <p>
