--- a/location.html
+++ b/location.html
@@ -17,7 +17,7 @@ robot_tags:
         <div class="col-md-6">
             <br>
             <h2>Location</h2>
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            <p>Der Unterrichtsort befindet sich in einer ruhigen Seitenstraße unweit der U-Bahn Osterstraße (Karte unter <a href="kontakt.html#gmapsElement">Kontakt</a>).</p>
         </div>
         <div class="col-md-6">
             <img class="full_width" src="assets/images/location/haus_aussen.jpg">
@@ -33,7 +33,7 @@ robot_tags:
         <div class="col-md-6">
             <br>
             <h2>Schalldichtes Tonstudio</h2>
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            <p>Die hellen und hohen Räume eines Hauses, das um das Jahr 1910 erbaut wurde, laden dazu ein, in gemütlicher Atmosphäre zu musizieren. Der Unterrichtsraum ist mittels einer aufwändigen Raum-in-Raum-Lösung schallisoliert. Man kann also in die Saiten greifen, ohne Nachbarn zu stören, oder gestört zu werden.</p>
         </div>
     </div>
     
