--- a/person.html
+++ b/person.html
@@ -75,7 +75,7 @@ robot_tags:
                     </tr>
                     <tr>
                         <td>Seit 1995</td>
-                        <td>Dipl. Gitarrenunterricht in Hamburg Eimsbüttel</td>
+                        <td>Gitarrenunterricht in Hamburg Eimsbüttel</td>
                     </tr>
                 </table>
             </div>
