--- a/technik.html
+++ b/technik.html
@@ -17,10 +17,21 @@ robot_tags:
         <div class="col-md-6">
             <br>
             <h2>Technik</h2>
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            <p>Die Technik dient unter anderem dazu, die Musikinhalte des Gitarrenunterrichts an das Spielvermögen des Schülers anzupassen. 
+                Dafür ist ein Wave-Editor vorhanden, mit dem Audioschleifen in verschiedenen Geschwindigkeiten und (wenn nötig) in unterschiedlichen Tonhöhen erzeugt werden können. So kann der Schüler mitspielend üben.
+                </p>
         </div>
         <div class="col-md-6">
             <img class="full_width" src="assets/images/gallery_main/3.png">
         </div>
+    </div>
+
+    <hr class="line-splitter">
+
+    <div class="row">
+        <div class="col-md-3">Für Aufnahmen steht das Sequenzerprogramm Cubase, mit diversen Plugins zur Verfügung. (CC IMAGE)</div>
+        <div class="col-md-3">Ein 12 Kanal Mixer sorgt für die richtige Signalansteuerung. (MG4199)</div>
+        <div class="col-md-3">Diverse Groß- und Kleinmembranmikrofone sind zum abnehmen des Gitarrensounds oder der Gesangsstimme bereit. (MG4205)</div>
+        <div class="col-md-3">Ein E-Piano zum Einspielen von Midi-Noten, zum Erklären der Musiktheorie oder einfach zum Bespielen ist vorhanden. (MG4209)</div>
     </div>
 </div>
