--- a/kosten.html
+++ b/kosten.html
@@ -16,17 +16,17 @@ robot_tags:
     <div class="row">
         <div class="col-md-4">
             <img class="previewIcon" src="assets/images/kosten_probezeit.svg">
-            <h3>4- bis 6-wöchige Probephase</h3>
+            <h3>Kostenloser Kennlerntermin</h3>
             <!--<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et</p>-->
         </div>
         <div class="col-md-4">
             <img class="previewIcon" src="assets/images/kosten_ferien.svg">
-            <h3>Kein Unterricht in den Ferien</h3>
+            <h3>4- bis 6-wöchige Probephase</h3>
             <!--<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et</p>-->
         </div>
         <div class="col-md-4">
             <img class="previewIcon" src="assets/images/kosten_bindung.svg">
-            <h3>Monatlich Kündigen</h3>
+            <h3>Keine Mindestvertragslaufzeit</h3>
             <!--<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et</p>-->
         </div>
     </div>
