--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ robot_tags:
 
     <hr class="line-splitter">
 
-    <h1>Kontakt aufnehmen</h1>
+    <h1><a href="kontakt.html"><i>Kontakt aufnehmen</i></a></h1>
 
     <!--
     <div class="row">
