--- a/technik.html
+++ b/technik.html
@@ -29,9 +29,21 @@ robot_tags:
     <hr class="line-splitter">
 
     <div class="row">
-        <div class="col-md-3">Für Aufnahmen steht das Sequenzerprogramm Cubase, mit diversen Plugins zur Verfügung. (CC IMAGE)</div>
-        <div class="col-md-3">Ein 12 Kanal Mixer sorgt für die richtige Signalansteuerung. (MG4199)</div>
-        <div class="col-md-3">Diverse Groß- und Kleinmembranmikrofone sind zum abnehmen des Gitarrensounds oder der Gesangsstimme bereit. (MG4205)</div>
-        <div class="col-md-3">Ein E-Piano zum Einspielen von Midi-Noten, zum Erklären der Musiktheorie oder einfach zum Bespielen ist vorhanden. (MG4209)</div>
+        <div class="col-md-3">
+            <img class="full_width" src="assets/images/technik/Cubase_logo.png">
+            Für Aufnahmen steht das Sequenzerprogramm Cubase, mit diversen Plugins zur Verfügung. (CC IMAGE)
+        </div>
+        <div class="col-md-3">
+            <img class="full_width" src="assets/images/technik/MG_4199.jpg">
+            Ein 12 Kanal Mixer sorgt für die richtige Signalansteuerung. (MG4199)
+        </div>
+        <div class="col-md-3">
+            <img class="full_width" src="assets/images/technik/MG_4205.jpg">
+            Diverse Groß- und Kleinmembranmikrofone sind zum abnehmen des Gitarrensounds oder der Gesangsstimme bereit. (MG4205)
+        </div>
+        <div class="col-md-3">
+            <img class="full_width" src="assets/images/technik/MG_4209.jpg">
+            Ein E-Piano zum Einspielen von Midi-Noten, zum Erklären der Musiktheorie oder einfach zum Bespielen ist vorhanden. (MG4209)
+        </div>
     </div>
 </div>
