--- a/technik.html
+++ b/technik.html
@@ -30,20 +30,20 @@ robot_tags:
 
     <div class="row">
         <div class="col-md-3">
-            <img class="full_width" src="assets/images/technik/Cubase_logo.png">
-            Für Aufnahmen steht das Sequenzerprogramm Cubase, mit diversen Plugins zur Verfügung. (CC IMAGE)
+            <img class="full_width" src="assets/images/technik/1.png">
+            Für Aufnahmen steht das Sequenzerprogramm Cubase, mit diversen Plugins zur Verfügung.
         </div>
         <div class="col-md-3">
-            <img class="full_width" src="assets/images/technik/MG_4199.jpg">
-            Ein 12 Kanal Mixer sorgt für die richtige Signalansteuerung. (MG4199)
+            <img class="full_width" src="assets/images/technik/2.jpg">
+            Ein 12 Kanal Mixer sorgt für die richtige Signalansteuerung.
         </div>
         <div class="col-md-3">
-            <img class="full_width" src="assets/images/technik/MG_4205.jpg">
-            Diverse Groß- und Kleinmembranmikrofone sind zum abnehmen des Gitarrensounds oder der Gesangsstimme bereit. (MG4205)
+            <img class="full_width" src="assets/images/technik/3.jpg">
+            Diverse Groß- und Kleinmembranmikrofone sind zum abnehmen des Gitarrensounds oder der Gesangsstimme bereit.
         </div>
         <div class="col-md-3">
-            <img class="full_width" src="assets/images/technik/MG_4209.jpg">
-            Ein E-Piano zum Einspielen von Midi-Noten, zum Erklären der Musiktheorie oder einfach zum Bespielen ist vorhanden. (MG4209)
+            <img class="full_width" src="assets/images/technik/4.jpg">
+            Ein E-Piano zum Einspielen von Midi-Noten, zum Erklären der Musiktheorie oder einfach zum Bespielen ist vorhanden.
         </div>
     </div>
 </div>
