--- a/technik.html
+++ b/technik.html
@@ -12,7 +12,7 @@ robot_tags:
     </div>
 </div>
 
-<div class="container">
+<div class="container text-left">
     <div class="row">
         <div class="col-md-6">
             <br>
@@ -28,22 +28,22 @@ robot_tags:
 
     <hr class="line-splitter">
 
-    <div class="row">
+    <div class="row small-image-row">
         <div class="col-md-3">
-            <img class="full_width" src="assets/images/technik/1.png">
-            Für Aufnahmen steht das Sequenzerprogramm Cubase, mit diversen Plugins zur Verfügung.
+            <img src="assets/images/technik/1.png">
+            <p>Für Aufnahmen steht das Sequenzerprogramm Cubase, mit diversen Plugins zur Verfügung.</p>
         </div>
         <div class="col-md-3">
-            <img class="full_width" src="assets/images/technik/2.jpg">
-            Ein 12 Kanal Mixer sorgt für die richtige Signalansteuerung.
+            <img src="assets/images/technik/2.jpg">
+            <p>Ein 12 Kanal Mixer sorgt für die richtige Signalansteuerung.</p>
         </div>
         <div class="col-md-3">
-            <img class="full_width" src="assets/images/technik/3.jpg">
-            Diverse Groß- und Kleinmembranmikrofone sind zum abnehmen des Gitarrensounds oder der Gesangsstimme bereit.
+            <img src="assets/images/technik/3.jpg">
+            <p>Diverse Groß- und Kleinmembranmikrofone sind zum abnehmen des Gitarrensounds oder der Gesangsstimme bereit.</p>
         </div>
         <div class="col-md-3">
-            <img class="full_width" src="assets/images/technik/4.jpg">
-            Ein E-Piano zum Einspielen von Midi-Noten, zum Erklären der Musiktheorie oder einfach zum Bespielen ist vorhanden.
+            <img src="assets/images/technik/4.jpg">
+            <p>Ein E-Piano zum Einspielen von Midi-Noten, zum Erklären der Musiktheorie oder einfach zum Bespielen ist vorhanden.</p>
         </div>
     </div>
 </div>
