--- a/location.html
+++ b/location.html
@@ -12,7 +12,7 @@ robot_tags:
     </div>
 </div>
 
-<div class="container">
+<div class="container text-left">
     <div class="row">
         <div class="col-md-6">
             <br>
