--- a/technik.html
+++ b/technik.html
@@ -28,7 +28,7 @@ robot_tags:
 
     <hr class="line-splitter">
 
-    <div class="row small-image-row">
+    <div class="row small-image-row margin-top-elements-in-row">
         <div class="col-md-3">
             <img src="assets/images/technik/1.png">
             <p>Für Aufnahmen steht das Sequenzerprogramm Cubase, mit diversen Plugins zur Verfügung.</p>
