--- a/kosten.html
+++ b/kosten.html
@@ -13,7 +13,7 @@ robot_tags:
 </div>
 
 <div class="container">
-    <div class="row">
+    <div class="row margin-top-elements-in-row">
         <div class="col-md-4">
             <img class="previewIcon" src="assets/images/kosten_probezeit.svg">
             <h3>Kostenloser Kennlerntermin</h3>
