--- a/kontakt.html
+++ b/kontakt.html
@@ -12,7 +12,7 @@ robot_tags:
   </div>
 </div>
 
-<div class="container">
+<div class="container kontakt-container">
     <div class="row">
           <img class="previewIcon" src="assets/images/kontakt_phone.svg">
           <img class="previewIcon" src="assets/images/kontakt_mail.svg">
