--- a/kosten.html
+++ b/kosten.html
@@ -12,8 +12,8 @@ robot_tags:
   </div>
 </div>
 
-<div class="container">
-    <div class="row margin-top-elements-in-row">
+<div class="container icon-row-container">
+    <div class="row margin-top-elements-in-row ">
         <div class="col-md-4">
             <img class="previewIcon" src="assets/images/kosten_probezeit.svg">
             <h3>Kostenloser Kennlerntermin</h3>
