--- a/impressum.html
+++ b/impressum.html
@@ -5,6 +5,8 @@ content_description:
 robot_tags:
 ---
 
+<div style="height: 51px;"></div>
+
 <div id="jumbotron-impressum" class="jumbotron">
   <div class="container">
       <h1>Impressum</h1>
