--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@ robot_tags:
         <a id="{{hash[0]}}" class="anchor"></a>
         {% include {{ pageentry.file }} %}
         
-        <hr class="line-splitter"> 
+        <hr class="line-splitter">
     {% endfor %}
 
-    <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
+    <!-- <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
 
         <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
             <a href="./assets/images/gallery_main/1.png" itemprop="contentUrl" data-size="1920x1080">
@@ -79,7 +79,7 @@ robot_tags:
                 <img src="./assets/images/gallery_main/3.png" itemprop="thumbnail" alt="Image description" />
             </a>
         </figure> 
-    </div>
+    </div>-->
 
     <!--
         <div class="row">
@@ -145,3 +145,4 @@ robot_tags:
     <hr class="line-splitter">-->
 
 </div>
+
