--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ robot_tags:
       </div>
   </div>
 </div>
-<a id="start" class="anchor" style="margin-bottom: 100px"></a>
+<a id="start" class="anchor"></a>
 
 <div class="container">
     <div class="row">
