--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ robot_tags:
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-3 center-text">
-            <img class="img-circle profilimage" src="assets/images/profil.jpg">
+            <img class="img-circle profilimage" src="assets/images/profil.jpg" alt="Profilfoto von Bernhard Welling">
         </div>
         <div class="col-md-7">
             <div id="banner-home">
