fix main heading

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@ robot_tags: noindex, test
   <div class="container">
       <!--<img class="iconjumbotron" src="/assets/logo-white.png">-->
       <div id="jumbotron-main-inner">
-          <h1>Bernhard Welling</h1>
-          <h2>Dipl. Gitarrenlehrer erteilt Gitarrenunterricht in Hamburg Eimsbüttel</h2>
+          <h1 class="with-subheading">
+            <div>Bernhard Welling</div>
+            <div>Dipl. Gitarrenlehrer erteilt Gitarrenunterricht in Hamburg Eimsbüttel</div>
+        </h1>
       </div>
   </div>
 </div>
