--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ robot_tags: noindex, test
         <div class="col-md-7">
             <div id="banner-home">
                 <h1>Hallo, willkommen auf meiner Website</h1>
-                <p>Sie spielen akustische Gitarre und wollen sich weiterentwickeln? Sie sind AnfängerIn und wollen den Schritt in die faszinierende Welt des musizierens "wagen"?
+                <p>Sie spielen akustische Gitarre und wollen sich weiterentwickeln? Sie sind AnfängerIn und wollen den Schritt in die faszinierende Welt des Musizierens "wagen"?
                     Dann sind Sie hier genau richtig. Sehen Sie sich auf der Seite um und verschaffen sich einen Eindruck über meinen Gitarrenunterricht in Hamburg-Eimsbüttel.</p>
             </div>
         </div>
