--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Home
 content_description:
-robot_tags: noindex, test
+robot_tags: 
 ---
 
 <div id="jumbotron-main" class="jumbotron">
