more meta tags available in head matter

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 layout: default
 title: Home
 content_description:
-robot_tags: 
+robot_tags:
+meta_keywords: 
+meta_author:
 ---
 
 <div id="jumbotron-main" class="jumbotron">
