--- a/impressum.html
+++ b/impressum.html
@@ -3,6 +3,8 @@ layout: default
 title: Impressum
 content_description:
 robot_tags:
+meta_keywords: 
+meta_author:
 ---
 
 <div style="height: 51px;"></div>
