--- a/impressum.html
+++ b/impressum.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Impressum
-content_description:
-robot_tags:
-meta_keywords: 
-meta_author:
+title: Gitarrenlehrer in Hamburg Eimsbüttel / Impressum
+content_description: Verantwortlich für den Inhalt der Seite gitarrenunterrichtineimsbuettel.de, ist der Dipl. Gitarrenlehrer Bernhard Welling
+robot_tags: index,follow
+meta_keywords: gitarrenunterricht, eimsbüttel, gitarrenlehrer, hamburg, gitarrenschule, stellingen
+meta_author: Bernhard Welling
 ---
 
 <div style="height: 51px;"></div>
