--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Home
-content_description:
-robot_tags:
-meta_keywords: 
-meta_author:
+title: Gitarrenunterricht / Gitarrenlehrer in Hamburg Eimsbüttel
+content_description: Dipl. Gitarrenlehrer Bernhard Welling informiert über seinen Gitarrenunterricht in Hamburg Eimsbüttel
+robot_tags: index,follow
+meta_keywords: gitarrenunterricht eimsbüttel, gitarrenlehrer eimsbüttel, gitarrenunterricht hamburg, gitarrenlehrer hamburg, eimsbüttel, gitarrenschule, hamburg
+meta_author: Bernhard Welling
 ---
 
 <div id="jumbotron-main" class="jumbotron">
