--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ meta_author: Bernhard Welling
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-3 center-text">
-            <img class="img-circle profilimage" src="assets/images/profil.jpg" alt="Profilfoto von Bernhard Welling">
+            <img class="img-circle profilimage" src="assets\images\Gitarrenlehrer_fuer_Gitarrenunterricht_in_Hamburg_Eimsbuettel.jpg" alt="Profilfoto von Bernhard Welling">
         </div>
         <div class="col-md-7">
             <div id="banner-home">
